tests/platform_helper/fixtures/make_addons/expected/environments/addons/my-rds-db.yml
# Generated by platform-helper v0.1-TEST / 2023-08-22 16:00:00

Parameters:
  # Copilot required Parameters...
  App:
    Type: String
    Description: Your application's name.
  Env:
    Type: String
    Description: The environment name your service, job, or workflow is being deployed to.

  # Parameters from the parent stack brought in via addons.parameters.yml...
  EnvironmentSecurityGroup:
    Type: String
  DefaultPublicRoute:
    Type: String
  InternetGateway:
    Type: String
  InternetGatewayAttachment:
    Type: String
  PrivateSubnets:
    Type: String
  PublicRouteTable:
    Type: String
  PublicSubnet1RouteTableAssociation:
    Type: String
  PublicSubnet2RouteTableAssociation:
    Type: String
  VpcId:
    Type: String

  # Other parameters...
  # Customize your RDS Postgres cluster by setting the default value of the following parameters.
  myRdsDbDBName:
    Type: String
    Description: The name of the initial database to be created.
    Default: main
    # Cannot have special characters
    # Naming constraints: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.Constraints

Mappings:
  myRdsDbEnvironmentConfigMap:
    development:
      DBInstanceClass: 'db.t3.small'
      MultiAZ: False
      AllocatedStorage: 100
      MaxAllocatedStorage: 126
      StorageType: gp3
      Iops: ""
      DeletionPolicy: Delete
      DeletionProtection: False
      SnapshotIdentifier: test-snapshot-id
    production:
      DBInstanceClass: 'db.m5.2xlarge'
      MultiAZ: True
      AllocatedStorage: 564
      MaxAllocatedStorage: 711
      StorageType: io1
      Iops: 1000
      DeletionPolicy: Delete
      DeletionProtection: False
      SnapshotIdentifier: ""

Conditions:
    myRdsDbCreateProdSubFilter: !Or [!Equals [!Ref Env, prod], !Equals [!Ref Env, production], !Equals [!Ref Env, PROD], !Equals [!Ref Env, PRODUCTION]]
    myRdsDbUseSnapshot: !Not [!Equals [!FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, SnapshotIdentifier], ""]]
    myRdsDbUseIops: !Not [!Equals [!FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, Iops], ""]]

Resources:
  # Subnet group to control where the DB gets placed
  myRdsDbDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      DBSubnetGroupDescription: Group of subnets to place DB into
      SubnetIds: !Split [ ",", !Ref PrivateSubnets ]

  # Security group to add the DB to the VPC,
  # and to allow the Fargate containers to talk to DB
  myRdsDbSecurityGroup:
    Metadata:
      'aws:copilot:description': 'A security group to access the DB cluster'
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      GroupDescription: "DB Security Group"
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub 'copilot-${App}-${Env}-my-rds-db-RDS-Postgres-SecurityGroup'

  # Enable ingress from other ECS services created within the environment.
  myRdsDbDBIngress:
    Metadata:
      'aws:copilot:description': 'Allow ingress from containers in my application to the DB cluster'
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Ingress from Fargate containers
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref EnvironmentSecurityGroup

  myRdsDbLambdaIngress:
    Metadata:
      'aws:copilot:description': 'Allow ingress from Lambda Functions in my application to the DB'
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Ingress from Lambda Functions to DB
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbSecretsManagerIngress:
    Metadata:
      'aws:copilot:description': 'Allow ingress from Lambda Functions in my application to the Secrets Manager'
    Type: AWS::EC2::SecurityGroupIngress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Ingress from Lambda Functions to Secrets Manager
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbLambdaEgress:
    Metadata:
      'aws:copilot:description': 'Allow egress from DB in my application to the Lambda Function'
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Egress from DB to Lambda Functions
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      DestinationSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbSecretsManagerEgress:
    Metadata:
      'aws:copilot:description': 'Allow egress from Secrets Manager in my application to the Lambda Function'
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: Egress from Secrets Manager to Lambda Functions
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref 'myRdsDbSecurityGroup'

  myRdsDbHTTPSEgress:
    Metadata:
      'aws:copilot:description': 'Allow egress for HTTPS (so the Lambda Function can post a success response back to the Custom Resource)'
    Type: AWS::EC2::SecurityGroupEgress
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Egress for HTTPS
      GroupId: !Ref 'myRdsDbSecurityGroup'
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443

  myRdsDbRDSDBParameterGroup:
    Metadata:
      'aws:copilot:description': 'A DB parameter group for engine configuration values'
    Type: 'AWS::RDS::DBParameterGroup'
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: !Ref 'AWS::StackName'
      Family: 'postgres14'
      Parameters:
        client_encoding: 'UTF8'
        log_statement: ddl
        log_statement_sample_rate: '1.0'

  myRdsDbKMSKey:
    Type: "AWS::KMS::Key"
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      Description: "KMS Key for RDS encryption"
      KeyPolicy:
        Version: '2012-10-17'
        Id: !Sub '${App}-${Env}-myRdsDb-key'
        Statement:
        - Sid: Enable IAM User Permissions
          Effect: Allow
          Principal:
            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
          Action: kms:*
          Resource: '*'

  myRdsDbKeyAlias:
    Type: 'AWS::KMS::Alias'
    Properties:
      AliasName: !Sub 'alias/${App}-${Env}-myRdsDb-key'
      TargetKeyId: !Ref myRdsDbKMSKey

  # The cluster itself.
  myRdsDbDBInstance:
    Metadata:
      'aws:copilot:description': 'DB cluster'
    Type: AWS::RDS::DBInstance
    DeletionPolicy: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionPolicy]
    UpdateReplacePolicy: Retain
    Properties:
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 8
      EnablePerformanceInsights:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          true
        ]
      EnableCloudwatchLogsExports:
        - postgresql
        - upgrade
      Engine: postgres
      EngineVersion: '14.4'
      DBInstanceClass: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DBInstanceClass]
      DBSnapshotIdentifier: !If [myRdsDbUseSnapshot, !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, SnapshotIdentifier], !Ref AWS::NoValue]
      AllocatedStorage: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, AllocatedStorage]
      MaxAllocatedStorage: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, MaxAllocatedStorage]
      StorageType: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, StorageType]
      Iops: !If [myRdsDbUseIops, !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, Iops], !Ref AWS::NoValue]
      MultiAZ: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, MultiAZ]
      DBParameterGroupName: !Ref myRdsDbRDSDBParameterGroup
      DBName:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Ref myRdsDbDBName
        ]
      KmsKeyId:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Ref myRdsDbKMSKey
        ]
      MasterUsername:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Join [ "",  [ '{{resolve:secretsmanager:', !Ref myRdsDbRDSSecret, ":SecretString:username}}" ]]
        ]
      MasterUserPassword:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          !Join [ "",  [ '{{resolve:secretsmanager:', !Ref myRdsDbRDSSecret, ":SecretString:password}}" ]]
        ]
      DBSubnetGroupName: !Ref 'myRdsDbDBSubnetGroup'
      VPCSecurityGroups:
        - !Ref myRdsDbSecurityGroup
      StorageEncrypted:
        !If [
          myRdsDbUseSnapshot,
          !Ref AWS::NoValue,
          true
        ]
      DeletionProtection: !FindInMap [myRdsDbEnvironmentConfigMap, !Ref Env, DeletionProtection]

  myRdsDbRDSSecret:
    Metadata:
      'aws:copilot:description': 'A Secrets Manager secret to store your DB credentials'
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub '/copilot/${App}/${Env}/secrets/MY_RDS_DB'
      Description: !Sub RDS main user secret for ${AWS::StackName}
      GenerateSecretString:
        SecretStringTemplate: '{"username": "postgres"}'
        GenerateStringKey: "password"
        ExcludePunctuation: true
        IncludeSpace: false
        PasswordLength: 16
        ExcludeCharacters: '[]{}()"@/\;=?&`><:|#'

  myRdsDbSecretRDSAttachment:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId: !Ref myRdsDbRDSSecret
      TargetId: !Ref myRdsDbDBInstance
      TargetType: AWS::RDS::DBInstance

  myRdsDbSubscriptionFilter:
    Type: AWS::Logs::SubscriptionFilter
    DependsOn:
      - myRdsDbDBInstance
    Properties:
      RoleArn: !Sub 'arn:aws:iam::${AWS::AccountId}:role/CWLtoSubscriptionFilterRole'
      LogGroupName: !Sub '/aws/rds/instance/${myRdsDbDBInstance}/postgresql'
      FilterName: !Sub '/aws/rds/instance/${App}/${Env}/${myRdsDbDBInstance}/postgresql'
      FilterPattern: ''
      DestinationArn: !If [myRdsDbCreateProdSubFilter, '', '']

Outputs:
  myRdsDbDBClusterSecurityGroupName:
    Description: The name of the db cluster security group
    Value: !Ref myRdsDbSecurityGroup
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-DBClusterSecurityGroupName"

  myRdsDbPublicSubnet1RouteTableAssociationName:
    Description: The name of the first public subnet route table association
    Value: !Ref PublicSubnet1RouteTableAssociation
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-PublicSubnet1RouteTableAssociationName"

  myRdsDbPublicSubnet2RouteTableAssociationName:
    Description: The name of the second public subnet route table association
    Value: !Ref PublicSubnet2RouteTableAssociation
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-PublicSubnet2RouteTableAssociationName"
    
  myRdsDbRdsSecretName:
    Description: Name of RDS db secret
    Value: !Ref myRdsDbRDSSecret
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-RdsSecretName"

  myRdsDbInternetGatewayName:
    Description: Name of internet gateway
    Value: !Ref InternetGateway
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-InternetGatewayName"
  
  myRdsDbPublicRouteTableName:
    Description: Name of public route table
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-PublicRouteTableName"
  
  myRdsDbDefaultPublicRouteName:
    Description: Name of default public route
    Value: !Ref DefaultPublicRoute
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-DefaultPublicRouteName"
    
  myRdsDbInternetGatewayAttachmentName:
    Description: Name of internet gateway attachment
    Value: !Ref InternetGatewayAttachment
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-InternetGatewayAttachmentName"

  myRdsDbPrivateSubnetsName:
    Description: Name of private subnets
    Value: !Ref PrivateSubnets
    Export:
      Name: !Sub "${App}-${Env}-myRdsDb-PrivateSubnetsName"
